<resources>
    <string name="app_name">Anahuac</string>
    <string name="hint_email_or_phone_number">Email or phone number</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="txt_need_help">Need help?</string>
    <string name="txt_sign_up">Sign In</string>

    <string name="txt_title_practices">Prácticas</string>
    <string name="txt_login_facebook">Sign In</string>

    <string name="txt_login_sign_in_netflix">Sign In</string>
    <string name="txt_remember_me">Remember me</string>
    <string name="btn_login">Log In</string>
    <string name="txt_new_netflix">New to Netflix?</string>
    <string name="sign_up_now_netflix">Sign up now</string>
    <string name="txt_recycle_campus">Lista de campus</string>
    <string name="txt_anahuac_cancun">Universidad Anáhuac - Campus Cancún</string>
    <string name="txt_alerta">Alerta</string>
    <string name="btn_alerta_with_buttom">Alerta con botones</string>
    <string name="btn_alerta_with_options">Alerta con opciones</string>
    <string name="login_title">LOGIN</string>
    <string name="btn_login_activity">LOGIN</string>
    <string name="btn_forgot">FORGOT PASSWORD?</string>
</resources>