<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_fb">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_logo"
        android:src="@drawable/facebook"
        android:layout_marginBottom="@dimen/margin_default"
        app:tint= "@color/white"
        app:layout_constraintBottom_toTopOf="@id/cv_inputs"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toTopOf="@id/gl_center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_margin="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_or_phone_number"
                android:background="@null"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@android:color/darker_gray"/>

            <EditText
                android:layout_margin="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:background="@null"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/gl_center"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:backgroundTint="@color/secondary_fb"/>
    <TextView
        android:text="@string/txt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/txt_need_help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_need_help"
        android:text="@string/txt_need_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>